Fixed Image overflow & Tab Styling

--- a/src/app/components/tabs/tabs.component.scss
+++ b/src/app/components/tabs/tabs.component.scss
@@ -14,5 +14,13 @@ a {
 }
 
 .active {
-  background-color: red;
+  font-weight: bold;
+  color: white;
+  background-color: #f44336;
+  border-radius: 10px 10px 0 0;
+}
+
+.inactive:hover {
+  background-color: #ffebee;
+  border-radius: 10px 10px 0 0;
 }
