--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -27,8 +27,9 @@
   justify-content: center;
   align-items: center;
   width: 30%;
-  height: 100%;
+  height: auto;
   margin-left: 45px;
+  overflow: hidden;
 }
 
 .navBarHeader {
